--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 <body>
     <div>
         <span>Job Number:</span>
-        J-1106261
+        <span class="job-number">J-1106261</span> 
     </div>
 
     <div>
         <span>Site Number:</span>
-        813666
+        <span class="site-number">813666</span>
     </div>
-
-    
 </body>
 </html>
